--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,22 @@
 body {
     background-color: darkslategray;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#main {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+#question {
+    visibility: hidden;
+    list-style: none;
+}
+
+#quiz-title {
+
+}
+
+#highscores-link {
+
 }
