--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+li {
+    display:flex;
+    justify-content: center;
+    margin: 20px;
+}
+
 .main {
     display:flex;
     flex-direction:column;
